--- a/files/en-us/mozilla/add-ons/webextensions/firefox_differentiators/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/firefox_differentiators/index.html
@@ -82,7 +82,7 @@ tags:
    <td>
     <p>Add advanced security capabilities <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/API/pkcs11">using PKCS #11 security modules to source keys and certificates</a>.</p>
    </td>
-   <td style="text-align: center;"><img alt="Illustration of the certificate and key" src="certificate_key.png"></td>
+   <td><img alt="Illustration of the certificate and key" src="certificate_key.png"></td>
   </tr>
  </tbody>
 </table>
