--- a/files/en-us/mozilla/add-ons/webextensions/firefox_workflow_overview/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/firefox_workflow_overview/index.html
@@ -18,11 +18,11 @@ tags:
 <table>
  <tbody>
   <tr>
-   <td style="width: 200px; text-align: center;"><img alt="Firefox workflow prepare step graphic" src="firefox_workflow_prepare.png"></td>
-   <td style="width: 200px; text-align: center;"><img alt="Firefox workflow code step graphic" src="firefox_workflow_code.png"></td>
-   <td style="width: 200px; text-align: center;"><img alt="Firefox workflow publish step graphic" src="firefox_workflow_publish.png"></td>
-   <td style="width: 200px; text-align: center;"><img alt="Firefox workflow enhance step graphic" src="firefox_workflow_enhance.png"></td>
-   <td style="width: 200px; text-align: center;"><img alt="Firefox workflow retire step graphic" src="firefox_workflow_retire.png"></td>
+   <td><img alt="Firefox workflow prepare step graphic" src="firefox_workflow_prepare.png"></td>
+   <td><img alt="Firefox workflow code step graphic" src="firefox_workflow_code.png"></td>
+   <td><img alt="Firefox workflow publish step graphic" src="firefox_workflow_publish.png"></td>
+   <td><img alt="Firefox workflow enhance step graphic" src="firefox_workflow_enhance.png"></td>
+   <td><img alt="Firefox workflow retire step graphic" src="firefox_workflow_retire.png"></td>
   </tr>
   <tr>
    <td>
