--- a/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/match_patterns/index.html
@@ -29,7 +29,7 @@ browser-compat: webextensions.match_patterns.scheme
 <table class="fullwidth-table standard-table">
  <thead>
   <tr>
-   <th scope="col" style="width: 50%;">Form</th>
+   <th scope="col">Form</th>
    <th scope="col">Matches</th>
   </tr>
  </thead>
@@ -52,7 +52,7 @@ browser-compat: webextensions.match_patterns.scheme
 <table class="fullwidth-table standard-table">
  <thead>
   <tr>
-   <th scope="col" style="width: 50%;">Form</th>
+   <th scope="col">Form</th>
    <th scope="col">Matches</th>
   </tr>
  </thead>
@@ -101,9 +101,9 @@ browser-compat: webextensions.match_patterns.scheme
 <table class="fullwidth-table standard-table">
  <thead>
   <tr>
-   <th scope="col" style="width: 33%;">Pattern</th>
-   <th scope="col" style="width: 33%;">Example matches</th>
-   <th scope="col" style="width: 33%;">Example non-matches</th>
+   <th scope="col">Pattern</th>
+   <th scope="col">Example matches</th>
+   <th scope="col">Example non-matches</th>
   </tr>
  </thead>
  <tbody>
