--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/index.html
@@ -19,7 +19,7 @@ tags:
   <tr>
    <th scope="col">UI option</th>
    <th scope="col">Description</th>
-   <th scope="col" style="width: 350px;">Example</th>
+   <th scope="col">Example</th>
   </tr>
  </thead>
  <tbody>
