--- a/files/en-us/mozilla/add-ons/webextensions/your_second_webextension/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/your_second_webextension/index.html
@@ -411,7 +411,9 @@ browser.tabs.executeScript({file: "/content_scripts/beastify.js"})
 
 <p>Create a new directory called "beasts", and add the three images in that directory, with the appropriate names. You can get the images from <a href="https://github.com/mdn/webextensions-examples/tree/master/beastify/beasts">the GitHub repository</a>, or from here:</p>
 
-<p><img alt="" src="frog.jpg" style="display: inline-block; margin: 20px;"><img alt="" src="snake.jpg" style="display: inline-block; margin: 20px;"><img alt="" src="turtle.jpg" style="display: inline-block; margin: 20px;"></p>
+<p><img alt="" src="frog.jpg"></p>
+<p><img alt="" src="snake.jpg"></p>
+<p><img alt="" src="turtle.jpg"></p>
 
 <h2 id="Testing_it_out">Testing it out</h2>
 
