--- a/files/en-us/mozilla/add-ons/webextensions/index/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/index/index.html
@@ -8,4 +8,4 @@ tags:
 ---
 <div>{{AddonSidebar}}</div>
 
-<div style="overflow: auto;">{{Index("/en-US/docs/Mozilla/Add-ons/WebExtensions")}}</div>
+<div>{{Index("/en-US/docs/Mozilla/Add-ons/WebExtensions")}}</div>
