--- a/files/en-us/mozilla/add-ons/webextensions/native_manifests/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/native_manifests/index.html
@@ -14,7 +14,7 @@ tags:
 <table class="standard-table">
  <tbody>
   <tr>
-   <td style="width: 40%;"><a href="#native_messaging_manifests">Native messaging manifests</a></td>
+   <td><a href="#native_messaging_manifests">Native messaging manifests</a></td>
    <td>Enable a feature called <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/Native_messaging">native messaging</a>, in which an extension can communicate with a native app installed on the device.</td>
   </tr>
   <tr>
