--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/context_menu_items/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/context_menu_items/index.html
@@ -14,7 +14,7 @@ tags:
 
 <p>The full list of supported contexts is available at {{WebExtAPIRef("menus.ContextType")}} and includes contexts outside of a web page, such as bookmark items in the browser UI. For example, the "<a href="https://github.com/Rob--W/bookmark-container-tab">Open bookmark in Container Tab</a>" extension adds a menu item that allows the user to open a bookmark URL in a new container tab:</p>
 
-<p><img alt="" src="extension_context_menu.png" style="border: 1px solid black; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="extension_context_menu.png"></p>
 
 <h2 id="Specifying_context_menu_items">Specifying context menu items</h2>
 
