Remove inline styles from manifest key pages

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/offline_enabled/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/offline_enabled/index.html
@@ -16,7 +16,7 @@ browser-compat: webextensions.manifest.offline_enabled
 <table class="fullwidth-table standard-table">
  <tbody>
   <tr>
-   <th scope="row" style="width: 30%;">Type</th>
+   <th scope="row">Type</th>
    <td><code>Boolean</code></td>
   </tr>
   <tr>
