--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/storage/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/storage/index.html
@@ -14,7 +14,7 @@ browser-compat: webextensions.manifest.storage
 <table class="fullwidth-table standard-table">
  <tbody>
   <tr>
-   <th scope="row" style="width: 30%;">Type</th>
+   <th scope="row">Type</th>
    <td><code>Object</code></td>
   </tr>
   <tr>
