--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/chrome_url_overrides/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/chrome_url_overrides/index.html
@@ -12,7 +12,7 @@ browser-compat: webextensions.manifest.chrome_url_overrides
 <table class="fullwidth-table standard-table">
  <tbody>
   <tr>
-   <th scope="row" style="width: 30%;">Type</th>
+   <th scope="row">Type</th>
    <td><code>Object</code></td>
   </tr>
   <tr>
