Fix warnings in add-ons docs

--- a/files/en-us/mozilla/add-ons/webextensions/debugging_(before_firefox_50)/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/debugging_(before_firefox_50)/index.html
@@ -178,7 +178,7 @@ chrome.runtime.onMessage.addListener(notify);
 </div>
 
 <div class="notecard warning">
-<p>Enabling worker debugging in Toolbox Options will disable Browser Content Toolbox debugging, <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1236892">Bug 1236892</a> should address this.</p>
+<p><strong>Warning:</strong> Enabling worker debugging in Toolbox Options will disable Browser Content Toolbox debugging, <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=1236892">Bug 1236892</a> should address this.</p>
 </div>
 
 <p>{{EmbedYouTube("xAt3Q0PgJP4")}}</p>
