--- a/files/en-us/mozilla/add-ons/webextensions/examples/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/examples/index.html
@@ -12,7 +12,7 @@ tags:
 <p>These examples work in Firefox Nightly: most work in earlier versions of Firefox, but check the <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/browser_specific_settings">strict_min_version</a> key in the extension's manifest.json to make sure.</p>
 
 <div class="notecard warning">
-<p>Some examples work only on specific domains or pages. Details of any restrictions are provided in each example's readme file. None of the examples work in private browsing windows by default, see <a href="https://support.mozilla.org/en-US/kb/extensions-private-browsing#w_enabling-or-disabling-extensions-in-private-windows">Extensions in Private Browsing</a> for details.</p>
+<p><strong>Warning:</strong> Some examples work only on specific domains or pages. Details of any restrictions are provided in each example's readme file. None of the examples work in private browsing windows by default, see <a href="https://support.mozilla.org/en-US/kb/extensions-private-browsing#w_enabling-or-disabling-extensions-in-private-windows">Extensions in Private Browsing</a> for details.</p>
 </div>
 
 <p>To try these examples, clone the repository then:</p>
@@ -24,7 +24,7 @@ tags:
 </ol>
 
 <div class="warning">
-<p><strong>Important</strong>: Please do not submit these WebExtension examples to addons.mozilla.org (AMO); you do not have to sign the add-on WebExtension examples to run them. Follow the steps above.</p>
+<p><strong>Warning:</strong> Please do not submit these WebExtension examples to addons.mozilla.org (AMO); you do not have to sign the add-on WebExtension examples to run them. Follow the steps above.</p>
 </div>
 
 <p>If you want to contribute to the repository, <a href="https://github.com/mdn/webextensions-examples/blob/master/CONTRIBUTING.md">send us a pull request.</a></p>
