--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_specific_settings/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_specific_settings/index.html
@@ -77,7 +77,7 @@ browser-compat: webextensions.manifest.browser_specific_settings
 <h3 id="Microsoft_Edge_properties">Microsoft Edge properties</h3>
 
 <div class="notecard warning">
-<p><strong>Warning</strong>: Adding Edge-specific properties to the manifest caused an error prior to Firefox 69 which can prevent the extension from installing.</p>
+<p><strong>Warning:</strong> Adding Edge-specific properties to the manifest caused an error prior to Firefox 69 which can prevent the extension from installing.</p>
 </div>
 
 <p>Microsoft Edge stores its browser specific settings in the <code>edge</code> subkey, which has the following properties:</p>
@@ -97,7 +97,7 @@ browser-compat: webextensions.manifest.browser_specific_settings
 <h3 id="Safari_properties">Safari properties</h3>
 
 <div class="notecard warning">
-<p><strong>Warning</strong>: Adding Safari-specific properties to the manifest caused an error prior to Firefox 69 which can prevent the extension from installing.</p>
+<p><strong>Warning:</strong> Adding Safari-specific properties to the manifest caused an error prior to Firefox 69 which can prevent the extension from installing.</p>
 </div>
 
 <p>Safari stores its browser specific settings in the <code>safari</code> subkey, which has the following properties:</p>
