--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme_experiment/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme_experiment/index.html
@@ -70,7 +70,7 @@ browser-compat: webextensions.manifest.theme_experiment
 
 <div class="cl-preview-section">
 <div class="notecard warning">
-<p>This feature is experimental and could be subject to change.</p>
+<p><strong>Warning:</strong> This feature is experimental and could be subject to change.</p>
 </div>
 </div>
 
