--- a/files/en-us/mozilla/add-ons/webextensions/sharing_objects_with_page_scripts/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/sharing_objects_with_page_scripts/index.html
@@ -19,7 +19,7 @@ tags:
 </div>
 
 <div class="notecard warning">
-<p>As an extension developer you should consider that scripts running in arbitrary web pages are hostile code whose aim is to steal the user's personal information, damage their computer, or attack them in some other way.</p>
+<p><strong>Warning:</strong> As an extension developer you should consider that scripts running in arbitrary web pages are hostile code whose aim is to steal the user's personal information, damage their computer, or attack them in some other way.</p>
 
 <p>The isolation between content scripts and scripts loaded by web pages is intended to make it more difficult for hostile web pages to do this.</p>
 
