--- a/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/user_interface/browser_styles/index.html
@@ -23,7 +23,7 @@ tags:
 <p>When considering using <code>browser_style: true</code>, you need to test your extension with various themes (built-in or from AMO) to make sure that the extension UI behaves the way you expect it to.</p>
 
 <div class="notecard warning">
-<p>When <code>browser_style: true</code> is included in your web extension's manifest, text selection in your extension's UI is disabled except in input controls. If this will cause a problem, include browser_style:false instead.</p>
+<p><strong>Warning:</strong> When <code>browser_style: true</code> is included in your web extension's manifest, text selection in your extension's UI is disabled except in input controls. If this will cause a problem, include browser_style:false instead.</p>
 </div>
 
 <div class="notecard note">
