--- a/files/en-us/mozilla/add-ons/webextensions/your_first_webextension/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/your_first_webextension/index.html
@@ -65,7 +65,7 @@ cd borderify</pre>
 </ul>
 
 <div class="warning">
-<p><a href="https://extensionworkshop.com/documentation/develop/extensions-and-the-add-on-id/#when_do_you_need_an_add-on_id">In some situations you need to specify an ID for your extension</a>. If you do need to specify an add-on ID, include the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/browser_specific_settings">browser_specific_settings</a></code> key in <code>manifest.json</code> and set its <code>gecko.id</code> property:</p>
+<p><strong>Warning:</strong> <a href="https://extensionworkshop.com/documentation/develop/extensions-and-the-add-on-id/#when_do_you_need_an_add-on_id">In some situations you need to specify an ID for your extension</a>. If you do need to specify an add-on ID, include the <code><a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/browser_specific_settings">browser_specific_settings</a></code> key in <code>manifest.json</code> and set its <code>gecko.id</code> property:</p>
 
 <pre class="brush: json">"browser_specific_settings": {
   "gecko": {
