Remove non-heading IDs from add-ons docs

--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/content_security_policy/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/content_security_policy/index.html
@@ -57,7 +57,11 @@ browser-compat: webextensions.manifest.content_security_policy
 
 <h3 id="Valid_examples">Valid examples</h3>
 
-<p>Allow remote scripts from "https://example.com": <sup>(<em>see note</em> <a href="#examplenote_1">1</a>)</sup></p>
+<div class="note">
+  <p><strong>Note:</strong> Valid examples demonstrate the correct use of keys in CSP. However, extensions with 'unsafe-eval', remote script, blob, or remote sources in their CSP are not allowed for Firefox extensions as per the <a href="https://extensionworkshop.com/documentation/publish/add-on-policies/">add-on policies</a> and due to major security issues.</p>
+</div>
+
+<p>Allow remote scripts from "https://example.com":</p>
 
 <pre class="brush: json no-line-numbers">"content_security_policy": "script-src 'self' https://example.com; object-src 'self'"</pre>
 
@@ -107,8 +111,6 @@ browser-compat: webextensions.manifest.content_security_policy
 <p>Directive includes the unsupported keyword <code>'unsafe-inline'</code>:</p>
 
 <pre class="brush: json no-line-numbers">"content_security_policy": "script-src 'self' 'unsafe-inline'; object-src 'self'"</pre>
-
-<p><span id="exampleNote_1">1. <em>Note: Valid examples display the correct use of keys in CSP. However, extensions with 'unsafe-eval', remote script, blob, or remote sources in their CSP are not allowed for Firefox extensions as per the <a href="https://extensionworkshop.com/documentation/publish/add-on-policies/">add-on policies</a> and due to major security issues.</em></span></p>
 
 <h2 id="Browser_compatibility">Browser compatibility</h2>
 
