--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/theme/index.html
@@ -1266,7 +1266,7 @@ browser-compat: webextensions.manifest.theme
 
 <h2 id="Examples">Examples</h2>
 
-<p id="docs-internal-guid-f85f22a2-6854-24d7-769b-8a47c376e2f2">A basic theme must define an image to add to the header, the accent color to use in the header, and the color of text used in the header:</p>
+<p>A basic theme must define an image to add to the header, the accent color to use in the header, and the color of text used in the header:</p>
 
 <pre class="brush: json" dir="ltr"> "theme": {
    "images": {
@@ -1309,7 +1309,7 @@ browser-compat: webextensions.manifest.theme
    }
  }</pre>
 
-<p><a id="example-screenshot">The following example uses most of the different values for <code>theme.colors</code>:</a></p>
+<p>The following example uses most of the different values for <code>theme.colors</code>:</p>
 
 <pre class="brush: json">  "theme": {
     "images": {
