--- a/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_action/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/manifest.json/browser_action/index.html
@@ -160,7 +160,7 @@ browser-compat: webextensions.manifest.browser_action
    </td>
   </tr>
   <tr>
-   <td><a id="theme_icons"><code>theme_icons</code></a></td>
+   <td><code>theme_icons</code></td>
    <td><code>Array</code></td>
    <td>
     <p>This property enables you to specify different icons for themes depending on whether Firefox detects that the theme uses dark or light text.</p>
